--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,7 +1,6 @@
-/* App.css */
 .App {
   font-family: sans-serif;
-  background-color: #fff;
+  background-color: #ffffff;
 }
 
 .products-page {
@@ -12,15 +11,18 @@
 
 .products-page .product-item {
   width: 20%;
+  min-width: 300px;
+  max-width: 350px;
   margin: 10px;
   padding: 10px;
   border-radius: 5px;
-  background-color: #fefefe;
-  border: 1px solid #fefefe;
+  background-color: #fafafa;
+  border: 0.1px solid #fefefe;
+  box-shadow: 1px 1px 0.3em #eaeaea;
 }
 
 .product-item:hover {
-  border-color: #121212;
+  border-color: #eaeaea;
 }
 
 .product-item h5 {
@@ -65,6 +67,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 20px 0;
 }
 
 .pagination .disabled {
